@@ -1,3 +1,7 @@
+2012-04-12	Stephan Linz <linz@li-pro.net>
+
+	* ptxconfig: prepare mbref-uio-trunk for kernel 3.3
+
 2012-03-16	Stephan Linz <linz@li-pro.net>
 
 	* common: stay on glibmm-2.22.1 (from ptxdist-2011.12.0)
